--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				vec2 translated = position;
 				translated.y += fract( rowOffset + time );
 				float z = texture2D( noise, position.xy + vec2( 0.0, rowOffset ) ).a;
-				gl_Position = mvpMatrix * vec4( translated, z / 8.5, 1.0 );
+				gl_Position = mvpMatrix * vec4( translated, z, 1.0 );
 				
 				vec2 cxy = translated * vec2( 2.0, 1.0 ) - 1.0;
 				float radius = dot( cxy, cxy );
@@ -134,7 +134,7 @@
 				mat4.identity( flowModelViewMatrix );
 				mat4.rotate( flowModelViewMatrix, flowModelViewMatrix, Math.PI / 2, [ 1, 0, 0 ] );
 				mat4.translate( flowModelViewMatrix, flowModelViewMatrix, [ -1, -3.625 - aspectOffset, 0.625 ] );
-				mat4.scale( flowModelViewMatrix, flowModelViewMatrix, [ 2, 2 + aspectOffset, 1 ] );
+				mat4.scale( flowModelViewMatrix, flowModelViewMatrix, [ 2, 2 + aspectOffset, 0.12 ] );
 				
 				mat4.perspective( flowProjectionMatrix, 40 * Math.PI / 180, aspectRatio - aspectOffset, 1, 10 );
 				mat4.multiply( drawParams.mvpMatrix, flowProjectionMatrix, flowModelViewMatrix );
